--- a/package.json
+++ b/package.json
@@ -5,6 +5,8 @@
   "main": "index.js",
   "scripts": {
     "start": "node backend/server",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "client": "npm start --prefix client",
     "server": "nodemon backend/server",
     "dev": "concurrently \"npm run server\" \"npm run client\""
@@ -26,6 +28,7 @@
     "concurrently": "^6.2.1",
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
+    "gh-pages": "^3.2.3",
     "graphql": "^15.6.1",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.0.4",
